--- a/build.gradle
+++ b/build.gradle
@@ -50,5 +50,6 @@ project(":core") {
 
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
     }
 }
